--- a/public/css/terminal.css
+++ b/public/css/terminal.css
@@ -3,15 +3,17 @@ body {
 }
 
 .terminal {
+  padding-left: 5px;
   font-family: 'Ubuntu Mono', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   display: flex;
   flex-direction: row;
 }
 
 .terminalOutput {
+  padding-left: 5px;
   font-family: 'Ubuntu Mono', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   display: flex;
   flex-direction: row;
 }
@@ -50,7 +52,12 @@ body {
   padding-right: 10px;
 }
 
-.directory {
+.text {
+  color: white;
+  white-space: pre;
+}
+
+.dir {
   color: #578ac4;
   padding-right: 10px;
 }
